wire_bridge/build/log/idf_py_stderr_output_63476
Command: make -j 6 all
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:45:8: error: unknown type name 'lv_disp_draw_buf_t'; did you mean 'lv_draw_buf_t'?
   45 | static lv_disp_draw_buf_t s_draw_buf;
      |        ^~~~~~~~~~~~~~~~~~
      |        lv_draw_buf_t
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:59:27: error: unknown type name 'lv_disp_drv_t'; did you mean 'lv_fs_drv_t'?
   59 | static void lvgl_flush_cb(lv_disp_drv_t *drv, const lv_area_t *area, lv_color_t *color_p)
      |                           ^~~~~~~~~~~~~
      |                           lv_fs_drv_t
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c: In function 'display_init':
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:175:5: error: implicit declaration of function 'lv_disp_draw_buf_init'; did you mean 'lv_draw_buf_init'? [-Wimplicit-function-declaration]
  175 |     lv_disp_draw_buf_init(&s_draw_buf, s_buf1, s_buf2, BUF_PIXELS);
      |     ^~~~~~~~~~~~~~~~~~~~~
      |     lv_draw_buf_init
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:178:12: error: unknown type name 'lv_disp_drv_t'; did you mean 'lv_fs_drv_t'?
  178 |     static lv_disp_drv_t disp_drv;
      |            ^~~~~~~~~~~~~
      |            lv_fs_drv_t
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:179:5: error: implicit declaration of function 'lv_disp_drv_init'; did you mean 'lv_fs_drv_init'? [-Wimplicit-function-declaration]
  179 |     lv_disp_drv_init(&disp_drv);
      |     ^~~~~~~~~~~~~~~~
      |     lv_fs_drv_init
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:180:13: error: request for member 'hor_res' in something not a structure or union
  180 |     disp_drv.hor_res = LCD_W;
      |             ^
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:181:13: error: request for member 'ver_res' in something not a structure or union
  181 |     disp_drv.ver_res = LCD_H;
      |             ^
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:182:13: error: request for member 'flush_cb' in something not a structure or union
  182 |     disp_drv.flush_cb = lvgl_flush_cb;
      |             ^
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:182:25: error: 'lvgl_flush_cb' undeclared (first use in this function)
  182 |     disp_drv.flush_cb = lvgl_flush_cb;
      |                         ^~~~~~~~~~~~~
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:182:25: note: each undeclared identifier is reported only once for each function it appears in
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:183:13: error: request for member 'draw_buf' in something not a structure or union
  183 |     disp_drv.draw_buf = &s_draw_buf;
      |             ^
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:185:23: error: implicit declaration of function 'lv_disp_drv_register'; did you mean 'lv_fs_drv_register'? [-Wimplicit-function-declaration]
  185 |     lv_disp_t *disp = lv_disp_drv_register(&disp_drv);
      |                       ^~~~~~~~~~~~~~~~~~~~
      |                       lv_fs_drv_register
/Users/macbookair/esp/ETH_02/wire_bridge/main/display_status.c:185:23: error: initialization of 'lv_disp_t *' {aka 'struct _lv_display_t *'} from 'int' makes pointer from integer without a cast [-Wint-conversion]
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/display_status.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
